force-app/main/default/objects/I_RS_Research_Code_Grouping_Row__mdt/I_RS_Research_Code_Grouping_Row__mdt.object-meta.xml
<CustomObject>
    <description>For implementations of ERA Code groupings (e.g. SEO Codes for Projects, FOR Codes for researchers etc.), store key configuration details</description>
    <label>Research Code Grouping Row</label>
    <pluralLabel>Research Code Grouping Rows</pluralLabel>
</CustomObject>