force-app/main/default/objects/I_RS_Research_Code_Grouping_Row__mdt/fields/I_RS_Editable_Grid_Screen_Config__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Editable_Grid_Screen_Config__c</fullName>
    <description>Shared configuration settings for this entry, or group of entries</description>
    <label>Editable Grid Screen Config</label>
    <referenceTo>I_RS_Editable_Grid_Screen_Config__mdt</referenceTo>
    <relationshipLabel>Research Code Grouping Rows</relationshipLabel>
    <relationshipName>Research_Code_Grouping_Rows</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>