force-app/main/default/objects/I_RS_Research_Code_Grouping_Row__mdt/fields/I_RS_Grid_Config_File_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grid_Config_File_Name__c</fullName>
    <description>Name of static resource which has all grid configuration information</description>
    <inlineHelpText>Name of static resource which has all grid configuration information</inlineHelpText>
    <label>Grid Config File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>