force-app/main/default/objects/I_RS_Research_Code_Grouping_Row__mdt/fields/I_RS_Grouping_Label__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grouping_Label__c</fullName>
    <description>How the grouping should be labelled on the UI</description>
    <inlineHelpText>How the grouping should be labelled on the UI</inlineHelpText>
    <label>Grouping Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>