force-app/main/default/objects/I_RS_Research_Code_Grouping_Row__mdt/fields/I_RS_Grouping_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grouping_Name__c</fullName>
    <description>When aggregating and validating the codes, they belong to distinct Classification Master groups. This field captures the settings for them.</description>
    <inlineHelpText>When aggregating and validating the codes, they belong to distinct Classification Master groups. This field captures the settings for them.</inlineHelpText>
    <label>Grouping Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fields of Research (FOR)</fullName>
                <default>true</default>
                <label>Fields of Research (FOR)</label>
            </value>
            <value>
                <fullName>Fields of Research - 2008 (FOR - 08)</fullName>
            </value>
            <value>
                <fullName>Socio-economic Objective (SEO)</fullName>
            </value>
            <value>
                <fullName>Socio-economic Objective - 2008 (SEO - 08)</fullName>
            </value>
            <value>
                <fullName>Type of Activity (TOA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>