force-app/main/default/objects/I_RS_Research_Code_Grouping_Row__mdt/fields/I_RS_Hide_in_breakdown_list_if_empty__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Hide_in_breakdown_list_if_empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When using the &apos;breakdown&apos; UI component that aggregates code data by grouping, you can opt to hide rows where no records are found. For example, historical data that is less important than the other codes.</description>
    <inlineHelpText>When using the &apos;breakdown&apos; UI component that aggregates code data by grouping, you can opt to hide rows where no records are found. For example, historical data that is less important than the other codes.</inlineHelpText>
    <label>Hide in breakdown list if empty</label>
    <type>Checkbox</type>
</CustomField>